--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,12 @@ dependencies:
   flutter_inset_box_shadow: ^1.0.8
   intl: ^0.18.1
   flutter_screenutil: ^5.8.4
+  flutter_form_builder: ^9.1.0
+  provider: ^6.0.5
+  riverpod: ^2.3.6
+  flutter_riverpod: ^2.3.6
+  firebase_messaging: ^14.6.5
+  blur: ^3.1.0
 
 dev_dependencies:
   flutter_test:
